--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>eureka-server</module>
 		<module>gateway-server</module>
 		<module>admin-server</module>
+		<module>restfull-web-services</module>
 	</modules>
 
 	<properties>
@@ -45,6 +46,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
